; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_dev_timeout.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_devctl.c_btm_dev_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 (i8*)* }
%struct.TYPE_6__ = type { i64 }

@TT_DEV_RLN = common dso_local global i64 0, align 8
@btm_cb = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btm_dev_timeout(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32 (i8*)**, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @TT_DEV_RLN, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %21

11:                                               ; preds = %1
  %12 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %13 = bitcast i32 (i8*)* %12 to i32 (i8*)**
  store i32 (i8*)** %13, i32 (i8*)*** %4, align 8
  store i32 (i8*)* null, i32 (i8*)** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @btm_cb, i32 0, i32 0, i32 0), align 8
  %14 = load i32 (i8*)**, i32 (i8*)*** %4, align 8
  %15 = icmp ne i32 (i8*)** %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %11
  %17 = load i32 (i8*)**, i32 (i8*)*** %4, align 8
  %18 = load i32 (i8*)*, i32 (i8*)** %17, align 8
  %19 = call i32 %18(i8* null)
  br label %20

20:                                               ; preds = %16, %11
  br label %21

21:                                               ; preds = %20, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
